--- a/addon/Probability_Drop/index.html
+++ b/addon/Probability_Drop/index.html
@@ -14,9 +14,9 @@
 <meta name="theme-color" content="#ffffff">
 
 <!-- CSSまとめ -->
-<link rel="stylesheet" href="https://akaina0809.github.io/addon/skin/style.css">
-<link rel="stylesheet" href="https://akaina0809.github.io/addon/skin/css/color.css">
-<link rel="stylesheet" href="https://akaina0809.github.io/addon/skin/css/kotei.css">
+<link rel="stylesheet" type="text/css" href="https://akaina0809.github.io/addon/skin/style.css"> 
+<link rel="stylesheet" type="text/css" href="https://akaina0809.github.io/addon/skin/css/color.css">
+<link rel="stylesheet" type="text/css" href="https://akaina0809.github.io/addon/skin/css/kotei.css">
 
 <style>
 @font-face {
@@ -106,3 +106,4 @@
 </footer>
 </body>
 </html>
+
