--- a/addon/Probability_Drop/English.html
+++ b/addon/Probability_Drop/English.html
@@ -10,13 +10,13 @@
 <!-- favicon / アイコン統一 -->
 <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/akaina0809/akaina0809.github.io/main/addon/Probability_Drop/pack_icon.png">
 <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/akaina0809/akaina0809.github.io/main/addon/Probability_Drop/pack_icon.png">
-<link rel="manifest" href="https://akaina0809.github.io/addon/Probability_Drop/manifest.json">
+<link rel="manifest" href="https://akaina0809.github.io/addon/skin/manifest.json">
 <meta name="theme-color" content="#ffffff">
 
 <!-- CSSまとめ -->
-<link rel="stylesheet" type="text/css" href="https://akaina0809.github.io/addon/skin/style.css"> 
-<link rel="stylesheet" type="text/css" href="https://akaina0809.github.io/addon/skin/css/color.css">
-<link rel="stylesheet" type="text/css" href="https://akaina0809.github.io/addon/skin/css/kotei.css">
+<link rel="stylesheet" href="https://akaina0809.github.io/addon/skin/style.css">
+<link rel="stylesheet" href="https://akaina0809.github.io/addon/skin/css/color.css">
+<link rel="stylesheet" href="https://akaina0809.github.io/addon/skin/css/kotei.css">
 
 <style>
 @font-face {
@@ -28,9 +28,9 @@
 </style>
 
 <!-- deferで非同期読み込み -->
-<script src="https://akaina0809.github.io/addon/skin/js/script_2.js" defer></script>
-<script src="https://akaina0809.github.io/addon/skin/js/script.js" defer></script>
-<script src="https://akaina0809.github.io/addon/skin/js/script3.js" defer></script>
+<script src="https://akaina0809.github.io/addon/skin/js/script_2.js" async></script>
+<script src="https://akaina0809.github.io/addon/skin/js/script.js" async></script>
+<script src="https://akaina0809.github.io/addon/skin/js/script3.js" async></script>
 </head>
 
 <body onselectstart="return false;" onmousedown="return false;">
@@ -105,4 +105,3 @@
 </footer>
 </body>
 </html>
-
