--- a/addon/Probability_Drop/English.html
+++ b/addon/Probability_Drop/English.html
@@ -13,18 +13,22 @@
 <script src="https://akaina0809.github.io/addon/skin/js/script_2.js"></script>
 <script src="https://akaina0809.github.io/addon/skin/js/script.js"></script>
 <script src="https://akaina0809.github.io/addon/skin/js/script3.js"></script>
+  
+<meta http-equiv="Cache-Control" content="max-age=31536000, immutable">
 
-</head>
+<!-- favicon / アイコン統一 -->
+<link rel="icon" type="image/png" href="https://raw.githubusercontent.com/akaina0809/akaina0809.github.io/main/addon/Probability_Drop/pack_icon.png">
+<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/akaina0809/akaina0809.github.io/main/addon/Probability_Drop/pack_icon.png">
+<link rel="manifest" href="https://akaina0809.github.io/addon/skin/manifest.json">
+<meta name="theme-color" content="#ffffff">
+
 <style>
 @font-face {
   font-family: "UzuraFont";
-  src: url("https://akaina0112.github.io/kozinn/fonts/uzura.ttf") format("truetype");
+  src: url("https://akaina0112.github.io/kozinn/fonts/uzura.woff2") format("woff2");
   font-display: swap;
 }
-
-* {
-  font-family: "UzuraFont", cursive;
-}
+* { font-family: "UzuraFont", cursive; }
 </style>
 
 <body onselectstart="return false;" onmousedown="return false;">
@@ -109,3 +113,4 @@
 </footer>
 </body>
 </html>
+
