--- a/mi.html
+++ b/mi.html
@@ -19,7 +19,7 @@
     <div class="maincontent">
       <h2>minecraft</h2>
       <h3>Molang</h3>
-      <a class="anda-kesu" href="./Molang_Query_Functions.html">
+      <a class="anda-kesu" href="./minecraft/Molang_Query_Functions.html">
         <div class="indexlink">
           Molang一覧(検索機能付き)
         </div>
