--- a/minecraft/Molang_Query_Functions.html
+++ b/minecraft/Molang_Query_Functions.html
@@ -165,7 +165,7 @@ td {
 
 </head>
 <body>
-<a href="../index.html" class="home-btn" style="
+<a href="https://akaina0809.github.io/mi.html" class="home-btn" style="
     display:inline-block;
     width:50px;
     height:50px;
