--- a/mi.html
+++ b/mi.html
@@ -73,7 +73,7 @@
   </style>
 </head>
 <body>
-  <button class="button-combined" href="https://akaina0809.github.io/">ホーム</button>
+  <button class="button-combined" onclick="location.href='https://akaina0809.github.io/'">ホーム</button>
   <div class="main">
     <div class="maincontent">
       <h2>minecraft</h2>
