--- a/dl/Download.html
+++ b/dl/Download.html
@@ -235,7 +235,7 @@ li {
     <div class="maincontent">
       <h2>マイクラ統合版アドオン</h2>
       マイクラ統合版で使えるいろんなアドオンを配布しています。<br>
-　<a href="https://akaina0809.github.io/">HOME</a>　　　<a href="https://akaina0809.github.io/Link.html">LINK</a><br>
+　<a href="https://akaina0809.github.io/">HOME</a>　　　<a href="https://akaina0809.github.io/Link.html">LINK</a>　　　<a href="https://akaina0809.github.io/mi.html">minecraft(addon)</a><br>
 
       <p style="text-align: right;">
         並べ替え: 
@@ -292,3 +292,4 @@ li {
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 </html>
+
