--- a/addon/yome_world/ok.html
+++ b/addon/yome_world/ok.html
@@ -2,13 +2,13 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>OK</title>
+  <title>配布OK</title>
   <style>
     body{display:flex;align-items:center;justify-content:center;height:100vh;font-family:sans-serif;background:#e0ffe0}
     h1{font-size:2em;color:#060}
   </style>
 </head>
 <body>
-  <h1>🎉 カウント完了！</h1>
+  <h1>準備中！</h1>
 </body>
 </html>
