--- a/addon/yome_world/index.html
+++ b/addon/yome_world/index.html
@@ -6,7 +6,7 @@
   <title>準備中</title>
 
   <!-- count_set.js を最初に読み込む -->
-  <script src="./js/count_set.js"></script>
+  <script src="https://akaina0809.github.io//js/count_set.js"></script>
 
   <style>
     html, body {
