--- a/addon/yome_world/index.html
+++ b/addon/yome_world/index.html
@@ -6,7 +6,7 @@
   <title>準備中</title>
 
   <!-- count_set.js を最初に読み込む -->
-  <script src="https://akaina0809.github.io//js/count_set.js"></script>
+<script src="https://akaina0809.github.io//js/count_set.js"></script>
 
   <style>
     html, body {
@@ -108,23 +108,7 @@
   <h2><a href="https://akaina0809.github.io/" class="home-btn">ホームへ</a></h2>
 
   <script>
-    // === 背景を季節ごとに切り替える ===
-    const bg = document.getElementById("bg");
-    const month = new Date().getMonth() + 1; // 1～12
-
-    if ([3,4,5].includes(month)) {
-      // 🌸 春
-      bg.style.backgroundImage = "url('https://i.redd.it/two-minecraft-backgrounds-i-made-first-time-using-shaders-v0-9co6s0m3me9d1.png?width=1920&format=png&auto=webp&s=d92e29b598711ebf0c9b9a77f3ee31d4d938a843')";
-    } else if ([6,7,8].includes(month)) {
-      // 🌊 夏
-      bg.style.backgroundImage = "url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1920&q=80')";
-    } else if ([9,10,11].includes(month)) {
-      // 🍁 秋
-      bg.style.backgroundImage = "url('https://akaina0809.github.io/images/6300219i.jpg')";
-    } else {
-      // ❄️ 冬（12～2月）
-      bg.style.backgroundImage = "url('https://i.redd.it/i-make-minecraft-wallpaper-snow-edition-v0-uwgrubje8gza1.png?width=1920&format=png&auto=webp&s=927d9b7a599aa55b8ade82918eac58901eec3b7b')";
-    }
+    applySeasonalBackground(); // 画像差し替えたい時はオプション渡せます
 
     // === カウントダウン ===
     const { time, mode } = a1();
