--- a/addon/yome_world/index.html
+++ b/addon/yome_world/index.html
@@ -4,6 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>準備中</title>
+  <meta name="description" content="Minecraftアドオン配布準備中！リリース日までのカウントダウンを表示しています。">
+<!-- 🔽 OGP（SNS用プレビュー） -->
+<meta property="og:title" content="配布準備中">
+<meta property="og:description" content="Minecraftアドオン配布準備中！公開までのカウントダウン中です。">
+<!--meta property="og:image" content="https://akaina0809.github.io/images/6300219i.jpg">
+<meta property="og:url" content="https://akaina0809.github.io/countdown.html"-->
+<meta property="og:type" content="website">
+<meta name="twitter:card" content="summary_large_image">
 
   <!-- count_set.js を最初に読み込む -->
   <script src="https://akaina0809.github.io/js/count_set.js"></script>
