--- a/addon/yome_world/index.html
+++ b/addon/yome_world/index.html
@@ -159,7 +159,7 @@
   </div>
 
   <h2>
-    <a href="https://akaina0809.github.io/dl/" class="home-btn">ホームへ</a>
+    <a href="https://akaina0809.github.io/dl/Download.html" class="home-btn">ホームへ</a>
   </h2>
 
   <script>
