--- a/osirase.html
+++ b/osirase.html
@@ -50,6 +50,42 @@
 </div>
 </section>
 </li>
+		
+<li>
+<section>
+<h3 class="title">2025/08/13</h3>
+<div class="box">
+<p>Molangを追加</p>
+<p>Add Molang.</p>
+<p>Molangに検索機能を追加</p>
+<p>Add search functionality to Molang.</p>
+</div>
+</section>
+</li>
+	
+<li>
+<section>
+<h3 class="title">2025/10/09</h3>
+<div class="box">
+<p>アドオンを配布したのでdownloadに追加</p>
+<p>I've distributed the add-on, so I added it to the download section.</p>
+<p>ワールドのカテゴリーを追加</p>
+<p>Added world categories.</p>
+</div>
+</section>
+</li>
+		
+<li>
+<section>
+<h3 class="title">2025/10/10</h3>
+<div class="box">
+<p>配布予定の物追加</p>
+<p>Addition of items to be distributed.</p>
+<p>配布予定の物に公開予定カウントダウン追加</p>
+<p>Added a countdown to upcoming distribution items.</p>
+</div>
+</section>
+</li>
 	
 </ul>
 
